Invoke GnuPG with an argument list instead of a shell command string, fixes #8311
GPG.execGnuPG() built a single command string and ran it through a shell
(/bin/sh -c on POSIX, Runtime.exec(String) on Windows). Callers concatenated
filenames, key IDs and the passphrase into that string wrapped in double
quotes, which do not prevent shell expansion. Filenames come from a directory
scan, so their content was interpreted rather than passed to GnuPG literally.

execGnuPG now takes a List<String> and uses ProcessBuilder directly, with no
shell involved. The ten call sites in the same file build argument lists.

Also on the same code path: the passphrase moves from the command line, where
it was readable through the process table, to stdin. GnuPG 2.1 and later
ignore a passphrase given that way unless the loopback pinentry is requested,
so that option is now passed as well - without it, decrypting with a
passphrase and the PGP decrypt stream transform have been failing on any
current GnuPG.

Tests: an argument-recording harness asserts what GnuPG actually receives for
every converted method, including that a command substitution in a filename or
key ID is never executed. Six integration tests cover folder scanning with
hostile filenames, binary encrypt, detached verify, decrypt with a passphrase,
the PGP stream transforms, and a command-injection proof. Against the previous
implementation 16 of these 25 tests fail.